--- a/build.gradle
+++ b/build.gradle
@@ -28,13 +28,13 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-amqp')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-devtools')
     compile('org.springframework.cloud:spring-cloud-starter-eureka')
     compile('org.springframework.cloud:spring-cloud-starter-ribbon')
     compile('org.springframework.cloud:spring-cloud-starter-feign')
-    compile('org.springframework.cloud:spring-boot-starter-web')
-    compile('org.springframework.cloud:spring-boot-starter-amqp')
-    compile('org.springframework.cloud:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-devtools')
     compile('io.springfox:springfox-swagger2:2.3.1')
     compile('io.springfox:springfox-swagger-ui:2.3.1')
     runtime('com.h2database:h2')
