--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
 jar {
@@ -25,6 +25,13 @@ repositories {
     mavenCentral()
 }
 
+
+idea {
+    module {
+        inheritOutputDirs = false
+        outputDir = file("$buildDir/classes/main/")
+    }
+}
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
@@ -40,6 +47,9 @@ dependencies {
     runtime('com.h2database:h2')
     compile('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('com.github.springtestdbunit:spring-test-dbunit:1.2.1')
+    testCompile('org.dbunit:dbunit:2.5.1')
+
 }
 
 dependencyManagement {
