--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,11 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-amqp')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-devtools')
+    compile('org.springframework.cloud:spring-cloud-starter-config')
+    compile('org.springframework.cloud:spring-cloud-starter-feign')
     compile('org.springframework.cloud:spring-cloud-starter-eureka')
     compile('org.springframework.cloud:spring-cloud-starter-ribbon')
-    compile('org.springframework.cloud:spring-cloud-starter-feign')
+    compile('org.springframework.cloud:spring-cloud-starter-stream-rabbit')
     compile('io.springfox:springfox-swagger2:2.3.1')
     compile('io.springfox:springfox-swagger-ui:2.3.1')
     runtime('com.h2database:h2')
@@ -54,6 +56,6 @@ dependencies {
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Camden.RELEASE"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.RELEASE"
     }
 }
